# buildroot-grpc-client-test

./: CMakeLists.txt  README.md  compile_host.sh  compile_pi.sh
proto/: device_control.proto
src/: device_control.grpc.pb.cc  device_control.grpc.pb.h  device_control.pb.cc  device_control.pb.h  main.cpp
